# Monte-Carlo-Equity-Simulator

./: .gitignore  CMakeLists.txt  FINDINGS.md  README.md
benchmark/: bench.cpp
data/: README.md  aapl.csv  nvda.csv  spy.csv
src/: csv_loader.hpp  gbm.hpp  jump_diffusion.hpp  main.cpp  options.hpp  rng.hpp  simulator.hpp  spsc_queue.hpp  stats.hpp  tail_analysis.hpp  task.hpp  thread_pool.hpp
tests/: test_main.cpp
